# kalman-sandbox

./: .gitignore  README.md  demo_truth_sim.py  pyproject.toml  run_bayes_iff.py  run_kalman.py
docs/: kalman_variables.md
kalman_sandbox/: BayesIFF.py  __init__.py  kalman.py  truth_sim.py
tests/: test_truth_sim.py
